--- a/test.html
+++ b/test.html
@@ -1,13 +1,5 @@
-<ul>
-    <li># Lorem, ipsum dolor.</li>
-    <li># Odit, veniam facere?</li>
-    <li># Possimus, alias tempora.</li>
-    <li># Voluptate, obcaecati voluptatum?</li>
-    <li># Repudiandae, odit aut.</li>
-    <li># Esse, accusantium quo.</li>
-    <li># Dolorem, corporis neque.</li>
-    <li># Consequatur, modi asperiores.</li>
-    <li># Nam, veritatis sunt!</li>
-    <li># Et, qui laudantium?</li>
-</ul>
-
+Lorem ipsum dolor sit.
+Ut, quod. Rem, inventore?
+Pariatur corporis ad laboriosam.
+Nostrum vel quidem voluptatibus.
+Delectus quasi deserunt ut!
